Deprecated warnings fixes.